[project]
name = "chromalist"
version = "0.1.0"
description = "Sort your Spotify playlists chromatographically by album cover art."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pillow>=10.3.0",
    "spotipy>=2.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ty]
# Configuration for Astral's ty type checker